--- a/.github/.git-pr-template.erb
+++ b/.github/.git-pr-template.erb
@@ -1,5 +1,6 @@
-Release <%= Time.now.strftime("%Y-%m-%d") %>
+Release <%= Time.now %> !!!
 <% pull_requests.each do |pr| -%>
 <%= pr.to_checklist_item %>
 <% end -%>
 
+- - - 
