--- a/.github/git-pr-template.erb
+++ b/.github/git-pr-template.erb
@@ -1,4 +1,4 @@
-Release <%= Time.now %> !!!
+Release to develop <%= Time.now.strftime("%Y-%m-%d") %>
 <% pull_requests.each do |pr| -%>
 <%= pr.to_checklist_item %>
 <% end -%>
