--- a/.github/git-release-main-release.erb
+++ b/.github/git-release-main-release.erb
@@ -1,6 +1,4 @@
-Release <%= Time.now %> !!!
+Release staging to main <%= Time.now %> !!!
 <% pull_requests.each do |pr| -%>
 <%= pr.to_checklist_item %>
 <% end -%>
-
-- - - 
