--- a/.github/git-release-staging-release.erb
+++ b/.github/git-release-staging-release.erb
@@ -1,4 +1,4 @@
-Release develop to staging <%= Time.now %> !!!
+Release develop to staging <%= Time.now.strftime("%Y-%m-%d") %>
 <% pull_requests.each do |pr| -%>
 <%= pr.to_checklist_item %>
 <% end -%>
